@@ -33,7 +33,7 @@
 #include <libgnome/gnome-i18n.h>
 #include <string.h>
 
-GtkWidget *e_calendar_file_dummy (EPlugin *epl, EConfigHookItemFactoryData *data);
+GtkWidget *e_book_file_dummy (EPlugin *epl, EConfigHookItemFactoryData *data);
 
 GtkWidget *
 e_book_file_dummy (EPlugin *epl, EConfigHookItemFactoryData *data)
@@ -41,14 +41,22 @@ e_book_file_dummy (EPlugin *epl, EConfigHookItemFactoryData *data)
 	EABConfigTargetSource *t = (EABConfigTargetSource *) data->target;
 	ESource *source = t->source;
 	char *uri_text;
-	
+	char *relative_uri;
+
         uri_text = e_source_get_uri (source);
 	if (strncmp (uri_text, "file", 4)) {
 		g_free (uri_text);
 		
 		return NULL;
 	}
-
+	
+	relative_uri = e_source_peek_relative_uri (source);
+	if (relative_uri && *relative_uri) {
+	  	g_free (uri_text);
+		
+		return NULL;
+	}
+		
 	e_source_set_relative_uri (source, e_source_peek_uid (source));
         uri_text = e_source_get_uri (source);
 
